<resources>
    <string name="app_name">MathMania</string>
    <string name="title_activity_main_normal_game">MainNormalGame</string>

    <string name="login_userNameHint">Username</string>
    <string name="login_userPassHint">Password</string>
    <string name="login_loginButton">Sign in</string>

    <string name="mathmania_logotype">MathMania logotype</string>

    <string name="menu_playButtonText">Play</string>
    <string name="menu_logOutButtonText">Log Out</string>
    <string name="menu_highscoreButtonText">Highscore</string>
    <string name="menu_aboutButtonText">About</string>
    <string name="menu_easyButtonText">Easy</string>
    <string name="menu_hardButtonText">Hard</string>

    <string name="result_doneButtonText">Done</string>
    <string name="result_congratulatoryMessage">Wow, you scored</string>
    <string name="result_pointsConcatenation">points!</string>
    <string name="result_defaultImageDescription">Right or wrong?</string>
    <string name="result_correctAnswer">Correct answer</string>
    <string name="result_question">Question</string>
    <string name="result_chosenAnswer">Your answer</string>

    <string name="highscore_highscoreText">Highscore:</string>

    <color name="theme_blue">#3f51b5</color>
    <color name="theme_yellow">#edf00c</color>

</resources>
