<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/question_listItem"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="170"
        android:text="@string/result_question"
        android:gravity="start|center_vertical"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/correctAnswer_listItem"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="150"
        android:text="@string/result_correctAnswer"
        android:gravity="start|center_vertical"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/chosenAnswer_listItem"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="150"
        android:text="@string/result_chosenAnswer"
        android:gravity="start|center_vertical"
        android:textSize="16sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/grade_listItem"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_weight="1"
        android:contentDescription="@string/result_defaultImageDescription"
        android:gravity="start|center_vertical"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>